# newhigh2026

./: .coverage  .env.example  .flake8  .gitignore  .pylintrc  AGENTS.md  ARCHITECTURE.md  BUGFIX_RUN_BACKTEST.md  CHANGELOG_UI_AUTO_FIX.md  DATABASE_SOLUTION.md  DESIGN.md  DESIGN_GOALS_STATUS.md  FRONTEND_DATA_BINDING.yaml  Makefile  NEWS_API_SETUP.md  NEWS_DISPLAY_README.md  OPENCLAW_AI_DEV_AGENT.yaml  OPENCLAW_ALPHA_FACTORY.yaml  OPENCLAW_AUTONOMOUS_DEV.yaml  OPENCLAW_DATA_PIPELINE.yaml  OPENCLAW_EVOLUTION.yaml  OPENCLAW_MASTER_SYSTEM.yaml  OPENCLAW_META_FUND.yaml  OPENCLAW_PLAN.md  OPENCLAW_SYSTEM.md  OPENCLAW_TASKS.yaml  OPENCLAW_TASK_TREE.yaml  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_AKSHARE.md  README.md  REFACTOR_SUMMARY.md  STOCK_MONITOR_PLAN.md  TEMP_FILE_CLEANUP.md  TEST_REPORT.md  UI_OPTIMIZATION_SPEC.md  WEB_PLATFORM_UPDATE.md  X_TWEET_INTEGRATION.md  ai_enhanced_report_002701.py  akshare_adapter.py  (+97 more)
ai-lab/: Dockerfile  README.md  pyproject.toml
ai-lab/src/ai_lab/: __init__.py  optuna_optimizer.py  rl_trader.py  strategy_generator.py
ai-lab/tests/: __init__.py
ai-models/: README.md  pyproject.toml
ai-models/src/ai_models/: __init__.py  _storage.py  emotion_cycle_model.py  hotmoney_detector.py  lstm_price_predictor.py  sector_rotation_ai.py
ai-models/tests/: test_ai_models_smoke.py
alpha-scoring/: README.md  pyproject.toml
alpha-scoring/src/alpha_scoring/: __init__.py  engine.py
alpha-scoring/tests/: __init__.py  test_engine.py
backtest-engine/: Dockerfile  README.md  pyproject.toml
backtest-engine/src/backtest_engine/: __init__.py  backtest_result.py  cost_models.py  data_loader.py  metrics.py  portfolio_backtest.py  position_manager.py  run_with_db.py  runner.py  strategy_allocator.py
backtest-engine/tests/: __init__.py  test_backtest_smoke.py
data-engine/: Dockerfile  README.md  pyproject.toml  requirements-wechat.txt  requirements.txt
data-engine/src/data_engine/: README_WECHAT.md  __init__.py  clickhouse_storage.py  connector_akshare.py  connector_astock_duckdb.py  connector_binance.py  connector_tushare.py  connector_tushare.py.bak  connector_yahoo.py  data_pipeline.py  realtime_stream.py  wechat_collector.py
data-engine/tests/: __init__.py  test_connector_akshare.py  test_connector_astock_duckdb.py  test_connector_binance.py  test_connector_yahoo.py
data-pipeline/: MULTI_SOURCE_NEWS_TEST_REPORT.md  NEWS_COLLECTION_IMPROVEMENT_PLAN.md  README.md  pyproject.toml
data-pipeline/src/data_pipeline/: __init__.py  freshness.py  sentiment_7d.py  strategy_market_writer.py
data-pipeline/src/data_pipeline/cache/: redis_cache.py
data-pipeline/src/data_pipeline/collectors/: __init__.py  caixin_news.py  daily_kline.py  em_stock_news.py  fund_flow.py  limit_up.py  longhubang.py  multi_source_news.py  official_news.py  policy_news_duckdb.py  realtime_quotes.py  rss_macro_news.py  stock_list.py  tushare_daily.py
data-pipeline/src/data_pipeline/data_sources/: __init__.py  ashare_daily_kline.py  ashare_longhubang.py  base.py  binance_source.py  tushare_source.py
data-pipeline/src/data_pipeline/etl/: __init__.py  clean_kline.py  factor_builder.py
data-pipeline/src/data_pipeline/ingest_worker/: README.md
data-pipeline/src/data_pipeline/scheduler/: __init__.py  daily_scheduler.py  realtime_scheduler.py
data-pipeline/src/data_pipeline/storage/: __init__.py  duckdb_manager.py
evolution-engine/: Dockerfile  README.md  pyproject.toml
evolution-engine/src/evolution_engine/: __init__.py  alpha_scoring.py  darwin_engine.py  strategy_pool.py
evolution-engine/tests/: __init__.py  test_alpha_scoring.py  test_strategy_pool.py
execution-engine/: Dockerfile  README.md  pyproject.toml
execution-engine/src/execution_engine/: __init__.py  binance_orders.py  order_lifecycle.py  order_manager.py  paper_trading.py  signal_executor.py
execution-engine/src/execution_engine/brokers/: __init__.py  base.py  (+3 more)
execution-engine/tests/: __init__.py  test_execution_smoke.py
feature-engine/: Dockerfile  README.md  pyproject.toml
feature-engine/src/feature_engine/: __init__.py  atr.py  implement_atr.py  implement_macd.py  implement_rsi.py  implement_vwap.py  macd.py  pipeline.py  rsi.py  vwap.py
feature-engine/tests/: __init__.py
gateway/: Dockerfile  README.md  pyproject.toml
gateway/src/gateway/: __init__.py  app.py  endpoints.py  endpoints_health.py  endpoints_pipeline.py  endpoints_stock_qa.py  endpoints_system_data.py  metrics.py  paper_fill_engine.py  response_utils.py  unified_auth_routes.py  unified_orders_routes.py  unified_password.py  unified_positions_routes.py  unified_stocks_routes.py  ws.py
gateway/tests/: __init__.py  test_app.py
meta-fund-manager/: README.md  pyproject.toml
meta-fund-manager/src/meta_fund_manager/: __init__.py  brain.py
meta-fund-manager/tests/: __init__.py  test_brain.py
portfolio-engine/: Dockerfile  README.md  pyproject.toml
portfolio-engine/src/portfolio_engine/: __init__.py  equal_weight.py  kelly_allocation.py  rebalance.py  risk_parity.py
portfolio-engine/tests/: __init__.py  test_equal_weight.py
scanner/: __init__.py  orchestrator.py  pyproject.toml  scanner.py  scanner_pipeline.py  universe.py
scanner/llm/: __init__.py  client.py
scanner/output/: scan_outcomes.json
scanner/skills/: __init__.py  backfill_enriched.py  canonicalize.py  chief_risk.py  feedback_curator.py  news_fetch.py  outcome_enrich.py  report_generator.py  stock_pick.py  strategy_select.py  theme_heat.py  theme_regime.py  theme_stock_bridge.py  theme_validate.py
scanner/src/market_scanner/: _storage.py  fund_flow_scanner.py  limit_up_scanner.py  trend_scanner.py  volume_spike_scanner.py
scanner/tests/: test_market_scanner_smoke.py
simulation-world/: README.md  pyproject.toml
simulation-world/src/simulation_world/: __init__.py  env.py
simulation-world/tests/: __init__.py  test_env.py
strategy/: Dockerfile  pyproject.toml
strategy/src/strategy_engine/: __init__.py  ai_fusion_strategy.py  base_strategy.py  mean_reversion.py  price_reference.py  price_reference.py.bak  trade_signal_aggregator.py
(+1484 files in other folders)
