[project]
name = "newhigh"
version = "0.1.0"
description = "AI Hedge Fund OS"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "core/tests",
    "data-engine/tests",
    "evolution-engine/tests",
    "strategy/tests",
    "portfolio-engine/tests",
    "risk-engine/tests",
    "scheduler/tests",
    "gateway/tests",
    "alpha-factory/tests",
    "alpha-scoring/tests",
    "strategy-evolution/tests",
    "simulation-world/tests",
    "meta-fund-manager/tests",
    "openclaw_engine/tests",
    "ai-models/tests",
    "backtest-engine/tests",
    "execution-engine/tests",
    "market-scanner/tests",
    "lib/tests",
]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
