[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab"
version = "0.1.0"
description = "AI strategy discovery and RL for newhigh"
requires-python = ">=3.10"
dependencies = [
    "optuna>=3.0.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
rl = [
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
]
