[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-models"
version = "0.1.0"
description = "A-share AI: emotion cycle, hotmoney detector, sector rotation"
requires-python = ">=3.10"
dependencies = ["duckdb>=0.9.0", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
