[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-engine"
version = "0.1.0"
description = "Vectorized backtesting for newhigh"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "vectorbt>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
