[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution-engine"
version = "0.1.0"
description = "Strategy evolution: Alpha scoring, strategy pool, Darwin engine"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
