[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-engine"
version = "0.1.0"
description = "Order execution for newhigh"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
