[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-engine"
version = "0.1.0"
description = "Factor generation for newhigh"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
