[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "FastAPI gateway for newhigh"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
]

[tool.setuptools.packages.find]
where = ["src"]
