[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "FastAPI gateway for newhigh"
requires-python = ">=3.10"
# 部分路由依赖 core.ashare_symbol；请与仓库根 requirements.txt 一并 pip install -e ./core
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "PyJWT>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
