[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-fund-manager"
version = "0.1.0"
description = "Meta fund manager: select, allocate, monitor, disable"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
