[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-engine"
version = "0.1.0"
description = "Portfolio optimization and rebalancing for newhigh"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
