[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-scanner"
version = "0.1.0"
description = "A-share market scanner: limit-up, fund flow, volume, sector, trend → market_signals"
requires-python = ">=3.10"
dependencies = ["duckdb>=0.9.0", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
