[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation-world"
version = "0.1.0"
description = "Market simulation environment for RL"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]
