[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy-engine"
version = "0.1.0"
description = "Strategy discovery and signals for newhigh"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
